NetBSD Problem Report #50740

From www@NetBSD.org  Mon Feb  1 16:53:16 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 548837A217
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  1 Feb 2016 16:53:16 +0000 (UTC)
Message-Id: <20160201165315.74A8A7ACAF@mollari.NetBSD.org>
Date: Mon,  1 Feb 2016 16:53:15 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/epoc32/stand/e32boot/ldd/epoc32.h:30: poor C++ coding style ?
X-Send-Pr-Version: www-1.0

>Number:         50740
>Category:       misc
>Synopsis:       src/sys/arch/epoc32/stand/e32boot/ldd/epoc32.h:30: poor C++ coding style ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    misc-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Feb 01 16:55:00 +0000 2016
>Closed-Date:    Mon Feb 01 17:56:50 +0000 2016
>Last-Modified:  Mon Feb 01 17:56:50 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160131
>Organization:
>Environment:
>Description:

[src/sys/arch/epoc32/stand/e32boot/ldd/epoc32.h:30]: (style) 'class EPOC32' does not have a copy constructor which is recommended since the class contains a pointer to allocated memory.

Basic C++ coding style is to provide all three of (ctor, dtor, copy-ctor)
if any one is defined.

Suggest mark it private if the intention is for the class not to be copied.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50740 CVS commit: src/sys/arch/epoc32/stand/e32boot/ldd
Date: Mon, 1 Feb 2016 12:44:19 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Mon Feb  1 17:44:19 UTC 2016

 Modified Files:
 	src/sys/arch/epoc32/stand/e32boot/ldd: epoc32.cpp epoc32.h

 Log Message:
 PR/50740: David Binderman: Provide a copy constructor.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/sys/arch/epoc32/stand/e32boot/ldd/epoc32.cpp \
     src/sys/arch/epoc32/stand/e32boot/ldd/epoc32.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Mon, 01 Feb 2016 17:56:50 +0000
State-Changed-Why:
Fixed by christos, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.