PR/50740: David Binderman: Provide a copy constructor.