sys/arch/epoc32/stand/e32boot/ldd/epoc32.h
@@ -1,4 +1,4 @@
-/*	$NetBSD: epoc32.h,v 1.1 2013/04/28 12:11:27 kiyohara Exp $	*/
+/*	$NetBSD: epoc32.h,v 1.2 2016/02/01 17:44:19 christos Exp $	*/
 /*
  * Copyright (c) 2013 KIYOHARA Takashi
  * All rights reserved.
@@ -30,6 +30,7 @@
 class EPOC32 {
 private:
 	CPU *cpu;
+	EPOC32(const EPOC32 &);
 
 public:
 	EPOC32(void);
